# pynori

./: .gitattributes  LICENSE  README.md  setup.cfg
data/ROV/far field/: 01_concatenate_ROV_data.py  Thumbs.db
data/ROV/near field/: 01_concatenate_ROV_data.py  Thumbs.db
pynori/: plotter.py  utils.py
pynori.egg-info/: PKG-INFO  SOURCES.txt
pynori/data/: DHI_ColorMap.csv
tests/: playground.ipynb  test_depth_profile_calibration.py  test_scatter.py  test_timeseries_calibration.py  test_utils.py
