[metadata]
name = pynori
version = 0.0.1
author = Abbas Jazaeri
author_email = abja@dhigroup.com
description = Python tools developed for NORI project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abja-dhi/pynori.git
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS  Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
your_package = 
    data/DHI_ColorMap.csv

[options.include_package_data]
include_package_data = True